--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,16 +2,36 @@ project:
   type: book
   output-dir: _book
 
+lang: zh-CN
+description: "Pattern Recognition and Machine Learning (PRML) 中文导读与学习翻译项目。"
+
 book:
-  title: "我的数学笔记"
+  title: "Pattern Recognition and Machine Learning 中文导读"
+  subtitle: "学习翻译与推导笔记"
   author: "Bayesiano"
   date: "2026-02-12"
+  site-url: "https://bayesianovich.github.io/webbook/"
+  repo-url: "https://github.com/Bayesianovich/webbook"
   chapters:
     - index.qmd
-    - formula.qmd
+    - chapters/01-introduction.qmd
+    - chapters/02-probability-distributions.qmd
+    - chapters/03-linear-models-regression.qmd
+  appendices:
+    - chapters/a-notation.qmd
 
 format:
   html:
     theme: cosmo
     toc: true
     number-sections: true
+    metadata:
+      description: "Pattern Recognition and Machine Learning (PRML) 中文导读与学习翻译项目。"
+      keywords:
+        - Pattern Recognition and Machine Learning
+        - PRML
+        - 机器学习
+        - 模式识别
+        - 概率图模型
+        - 贝叶斯学习
+        - Quarto
